--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     <div id="replayButton">
         <Img src="Images/replay.png"></Img>
     </div>
+    <section id="char">
+        <div id="green">
+            <img src="Images/green.png" alt="">
+        </div>
+        <div id="pink">
+            <img src="Images/pink.png" alt="">
+        </div>
+        <div id="gentleman">
+            <img src="Images/gentleman.png" alt="">
+        </div>
+        <div id="grumpy">
+            <img src="Images/grumpy.png" alt="">
+        </div>
+        <div id="dragon">
+            <img src="Images/dragon.png" alt="">
+        </div>
+    </section>
     <div id="startButton">
         <img src="Images/startButton.png"></img>   
     </div>
@@ -21,7 +38,6 @@
     <script src="bird.js"></script>
     <script src="particles.js"></script>
     <script src="obstacles.js"></script>
-    <script src="startScreen.js"></script>
     <script src="main.js"></script>
     
 
