--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <div id="replayButton">
         <Img src="Images/replay.png"></Img>
     </div>
+    
+
     <section id="char">
+        
         <div id="green">
             <img src="Images/green.png" alt="">
         </div>
@@ -31,6 +34,9 @@
             <img src="Images/dragon.png" alt="">
         </div>
     </section>
+
+    <h1 id="pickCharDisplay">Pick a Character</h1>
+
     <div id="startButton">
         <img src="Images/startButton.png"></img>   
     </div>
