--- a/index.html
+++ b/index.html
@@ -15,19 +15,12 @@
 <body>
     <div>
         <canvas id="startCanvas"></canvas>
-        <!-- <canvas id="gameCanvas"></canvas> -->
+        <canvas id="gameCanvas"></canvas>
     </div>
-    <!-- <div class="playerSelection">
-      <img class="greenBird character" src="Images/green.png" alt="" height="100px" width="100px">
-      <img class="pinkBird character" src="Images/pink.png" alt="" height="100px" width="100px">
-      <img class="gentlemanBird character" src="Images/gentleman.png" alt="" height="100px" width="100px">
-      <img class="grumpyBird character" src="Images/grumpy.png" alt="" height="100px" width="100px">
-      <img class="dragon character" src="Images/dragon.png" alt="" height="100px" width="100px">
-    </div> -->
 
 
     <script src="javaScript/bird.js"></script>
-    <script src="javaScript/particles.js"></script>
+    <!-- <script src="javaScript/particles.js"></script> -->
     <script src="javaScript/obstacles.js"></script>
     <script src="javaScript/main.js"></script>
 
