--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div>
+    <div id="canvasContainer">
         <canvas id="startCanvas"></canvas>
         <canvas id="gameCanvas"></canvas>
     </div>
