--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
     <script src="javaScript/bird.js"></script>
-    <!-- <script src="javaScript/particles.js"></script> -->
+    <script src="javaScript/particles.js"></script>
     <script src="javaScript/obstacles.js"></script>
     <script src="javaScript/main.js"></script>
 
